keyboard: For xkb options, have "Layout default" toggle, and "None" Meant to address issues mentioned in https://gitlab.gnome.org/GNOME/gnome-control-center/-/issues/1214 using the solution proposed there.

There is no "None" option for the compose key, since there doesn't
appear to be a way to disable it on the unusual layouts where it's
available by default.

XKB options are a mess, but this seems like a more accurate
representation of how they function.

Origin: https://gitlab.gnome.org/GNOME/gnome-control-center/-/merge_requests/910
Bug-Ubuntu: https://launchpad.net/bugs/1867548
Bug-GNOME: https://gitlab.gnome.org/GNOME/gnome-control-center/issues/918