panels/keyboard/cc-keyboard-panel.c
@@ -68,6 +68,7 @@ static const CcXkbModifier LV3_MODIFIER = {
   N_("Alternate Characters Key"),
   N_("The alternate characters key can be used to enter additional characters. These are sometimes printed as a third-option on your keyboard."),
   (CcXkbOption[]){
+    { NC_("keyboard key", "None"),        "lv3:ralt_alt" },
     { NC_("keyboard key", "Left Alt"),    "lv3:lalt_switch" },
     { NC_("keyboard key", "Right Alt"),   "lv3:ralt_switch" },
     { NC_("keyboard key", "Left Super"),  "lv3:lwin_switch" },
@@ -76,7 +77,8 @@ static const CcXkbModifier LV3_MODIFIER = {
     { NC_("keyboard key", "Right Ctrl"),  "lv3:switch" },
     { NULL,                               NULL }
   },
-  NULL,
+  "lv3:ralt_switch",
+  "lv3:ralt_alt",
 };
 
 static const CcXkbModifier COMPOSE_MODIFIER = {
@@ -97,6 +99,7 @@ static const CcXkbModifier COMPOSE_MODIFIER = {
     { NC_("keyboard key", "Print Screen"), "compose:prsc" },
     { NULL,                                NULL }
   },
+  NULL,
   NULL,
 };
 
